Next:
0004922 (DOM-MB): Change LBM default size
0004138: Add tests for LBM overflow wrap bug
0004064: Add simple unit tests to be run on request by surface
0004063: set LBM buffer size message doesn't return a proper status
0004045: Read FREV when iceboot self reset fails
0004030: Print unprintable characters returned on failed excepts, for Iceboot reset and other tests
0003844: Change 'F' monitoring records to report HLC instead of SLC
0003618: Make test for Iceboot 'reload' command (corresponding to 'versions all')
==============================================================

V00-02-08 08-26-09 John Jacobsen john@mail.npxdesigns.com
0003497 (DOM-MB): Setting SLC mode should fail if engineering format is set (improved test)
==============================================================

V00-02-07 08-26-09 John Jacobsen john@mail.npxdesigns.com
0003497 (DOM-MB): Setting SLC mode should fail if engineering format is set.
==============================================================

V00-02-06 05-18-09 John Jacobsen john@mail.npxdesigns.com
0003248 (DOM-MB): Make sure flasherboard gets disabled at end of run and allow surface to change FB settings mid-run (add test)
0003253: flasher tests fail on PCTS
==============================================================

V00-02-05 08-01-08 John Jacobsen john@mail.npxdesigns.com
0002799: FADCClockPollutionTest fails
==============================================================

V00-02-04 08-01-08 John Jacobsen john@mail.npxdesigns.com
0002797: Add non-HV version of pedestal stability test
0002798: Add 'Clock Pollution Test' for FADC
0002793: Occasional MinimumBiasTest failures
0002790: Occasional SLCOnlyHVTest failures
0002789: Occasional SLCOnlyPulserTest failures
0002788: Add option to repeat entire test cycle
0002787: Add option to suppress reporting of successful tests
==============================================================

V00-02-03 07-18-08 John Jacobsen john@mail.npxdesigns.com